--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,10 @@
         "Hanif",
         "Rais",
         "Struct"
-    ]
+    ],
+    "files.associations": {
+        "*.flex": "lex",
+        "iosfwd": "cpp",
+        "new": "cpp"
+    }
 }
